added 3 lines in index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <h1>this is a git crash course</h1>
 
     <h2>this is a test1</h2>
+
+    <h2>this is a test3</h2>
+
+    <h2>this is a test4</h2>
+
+    <h2>test2 is in app.js</h2>
   </body>
 </html>
